--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     --clr-primary-selfcare: hsl(43, 84%, 65%);
 
     /* Neutral */
-    --clr-neutral-xdarkblue: hsl(226, 43%, 10%);
-    --clr-neutral-darkblue: hsl(235, 46%, 20%);
+    --clr-neutral-xdarkblue-bg: hsl(226, 43%, 10%);
+    --clr-neutral-darkblue-card: hsl(235, 46%, 20%);
     --clr-neutral-desatblue: hsl(235, 45%, 61%);
     --clr-neutral-paleblue: hsl(236, 100%, 87%);
 
@@ -20,6 +20,113 @@
     --fw-light: 300;
     --fw-regular: 400;
     --fw-bold: 500;
+}
+
+body {
+    min-height: 100vh;
+    background-color: var(--clr-neutral-xdarkblue-bg);
+    color: var(--clr-neutral-paleblue);
+    font-family: var(--ff-primary);
+    font-size: var(--fs-base);
+    display: grid;
+    place-content: center;
+    padding: 5rem 1.5rem;
+}
+
+main {
+    display: grid;
+    gap: 1.5rem;
+}
+
+.card {
+    background-color: var(--clr-neutral-darkblue-card);
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+.user {
+    background-color: var(--clr-primary-blue);
+    display: grid;
+    place-items: center;
+    grid-template-columns: auto 1fr;
+    gap: 1rem;
+    border-radius: 1rem;
+    padding: 2rem;
+}
+
+.user-img {
+    width: 4rem;
+    border: 3px solid #ffffff;
+    border-radius: 50%;
+}
+
+.report-title {
+    font-size: 0.875rem;
+    font-weight: var(--fw-regular);
+}
+
+.user-name {
+    font-size: 1.5rem;
+    font-weight: var(--fw-light);
+    color: #ffffff;
+}
+
+.stat-switch {
+    padding: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.stat-switch > a {
+    text-decoration: none;
+    color: var(--clr-neutral-desatblue);
+}
+
+.stat-switch > a[data-active="true"] {
+    color: #ffffff;
+}
+
+@media (min-width: 900px) {
+    body {
+        padding: 15rem 10.5rem;
+    }
+    
+    main {
+        grid-auto-flow: column;
+        grid-template-columns: repeat(4, 1fr);
+        /* grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); */
+        grid-template-rows: repeat(2, 1fr);
+        grid-auto-rows: 1fr;
+    }
+
+    .card {
+        width: 250px;
+    }
+
+    .user-interface {
+        grid-row: 1 / -1;
+    }
+
+    .user {
+        place-items: initial;
+        grid-template-columns: 1fr;
+        padding: 2rem 10rem 4.5rem 2rem;
+    }
+
+    .user-img {
+        width: 5rem;
+        margin-bottom: 1.125rem;
+    }
+
+    .user-name {
+        font-size: 2.5rem;
+        line-height: 1.2;
+    }
+
+    .stat-switch {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
 
 .sr-only {
