--- a/style.css
+++ b/style.css
@@ -80,27 +80,37 @@ main {
 .stat-switch > a {
     text-decoration: none;
     color: var(--clr-neutral-desatblue);
+    transition: color 0.25s ease-in;
+}
+
+.stat-switch > a:hover {
+    color: #ffffff;
+    cursor: pointer;
 }
 
 .stat-switch > a[data-active="true"] {
     color: #ffffff;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1100px) {
     body {
         padding: 15rem 10.5rem;
     }
     
     main {
         grid-auto-flow: column;
-        grid-template-columns: repeat(4, 1fr);
-        /* grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); */
+        /* grid-template-columns: repeat(4, 1fr); */
+        grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
         grid-template-rows: repeat(2, 1fr);
         grid-auto-rows: 1fr;
     }
 
+    .card-wrapper {
+        min-width: 250px;
+    }
+
     .card {
-        width: 250px;
+        min-width: 250px;
     }
 
     .user-interface {
@@ -126,6 +136,73 @@ main {
     .stat-switch {
         flex-direction: column;
         gap: 1rem;
+    }
+}
+
+.work { background: url(images/icon-work.svg), var(--clr-primary-work); }
+.play { background: url(images/icon-play.svg), var(--clr-primary-play); }
+.study { background: url(images/icon-study.svg), var(--clr-primary-study); }
+.exercise { background: url(images/icon-exercise.svg), var(--clr-primary-exercise); }
+.social { background: url(images/icon-social.svg), var(--clr-primary-social); }
+.self-care { background: url(images/icon-self-care.svg), var(--clr-primary-selfcare); }
+
+.card-wrapper {
+    background-repeat: no-repeat;
+    background-position: right 16px top -16px;
+    border-radius: 1rem;
+    overflow: hidden;
+    padding-top: 2.25rem;
+}
+
+.stat {
+    padding: 1.5rem;
+    height: 100%;
+    transition: background-color 0.5s ease-in;
+}
+
+.stat:hover {
+    background-color: var(--clr-neutral-desatblue);
+    cursor: pointer;
+}
+
+.stat > * {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.stat-title {
+    color: #ffffff;
+    font-weight: var(--fw-bold);
+}
+
+.stat-title > img {
+    cursor: pointer;
+}
+
+.stat-total-data {
+    color: #ffffff;
+    font-weight: var(--fw-light);
+    font-size: 2rem;
+}
+
+.stat-overview {
+    font-size: 0.875rem;
+}
+
+@media (min-width: 1100px) {
+    .stat-data-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .stat-title {
+        margin-bottom: 0.875rem;
+    }
+
+    .stat-total-data {
+        font-size: 3.5rem;
     }
 }
 
