Moved cards in correct grid section

--- a/style.css
+++ b/style.css
@@ -191,6 +191,16 @@ main {
 }
 
 @media (min-width: 1100px) {
+    .play {
+        grid-column: 3;
+        grid-row: 1;
+    }
+
+    .study {
+        grid-column: 4;
+        grid-row: 1;
+    }
+
     .stat-data-wrapper {
         display: flex;
         flex-direction: column;
